Created ComparisonWithDefferentAges.java; Modified CandidateValidator.java and StreamPractice.java after mentor's checking